# ComfyUI_StarNodes

./: .tracking  CHANGELOG.md  EXAMPLE_WORKFLOWS.md  Example_Workflow_Flux_Refiner_With_Starnodes.json  FILES_INCLUDED.md  FINAL_RELEASE_CHECKLIST.md  FluxStart.py  FluxStart_bak.py  INSTALL.md  LICENSE  NANO_BANANA_ERROR_HANDLING.md  QwenEditPromptGuide.md  QwenImageStart.py  README.md  README_StarQwenRegionalPrompter.md  RELEASE_1.8.0_SUMMARY.md  RELEASE_NOTES.md  RELEASE_NOTES_1.7.0.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.3.md  RELEASE_NOTES_2.3.8.md  SD Upscale Refine.json  SD35Start.py  SDXLStart.py  SIMPLIFIED_REGIONAL_PROMPTER_V2.md  STARNODES THEME SYSTEM.md  Star SD Upscale Refiner.json  StarAspectVideoRatio.py  StarDenoiseSlider.py  StarDivisibleDimension.py  StarFluxFiller.py  StarImage2Latent.py  StarLatentInput2.py  StarLora.py  StarNewsScraper.py  StarNode.py  StarPSDSaver.py  StarPSDSaver2.py  StarPaletteExtractor.py  (+63 more)
docs/: CHANGELOG.md  EXAMPLE_WORKFLOWS.md  MIGRATION_1.7.0.md  QUICK_START_1.7.0.md  RELEASE_NOTES_1.8.0.md  RELEASE_NOTES_1.9.0.md  RELEASE_PREP_1.8.0.md
example_workflows/: AceStep Auto Songwriter.json  Gemini Image Gen (Nano Banana) HQ.json  Ideogram4 Unbound HQ.json  LTXV All In One.json  Qwen Image Edit.json  Qwen Image HQ.json  Qwen Image.json  Qwen Image_HQ.json  Star Filters.json  Starnodes Krea2 HighQuality.json  Starnodes Krea2 Unbound HQ.json  Starnodes LTXV All In One.json  Starnodes SeedVR PiD Compare.json  Upscale Refiner.json  Z-Image Turbo IMG2IMG.json  Z-Image-Enhanced.json  (+1 more)
lucida/: __init__.py  (+4 more)
(+127 files in other folders)
